--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,49 @@
-button {
-    width: 200px;
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.header {
     height: 100px;
+    width: 100vw;
+
+    display: flex;
+    align-items: center;
+
+    background-color: red;
+}
+
+.company-name {
+    font-size: 50px;
+    font-weight: 800;
+    text-overflow: nowrap;
+    color: white;
+    
+    min-width: 450px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.menu-bar {
+    display: flex;
+    gap: 20px;
+
+    margin-right: 20px;
+}
+
+button {
+    width: 60px;
+    height: 50px;
+
+    font-size: 20px;
+    font-weight: 600;
+    color: white;
+
+    background-color: darkred;
+    border: none;
+}
+
+.content-container {
+    background-color: blue;
+    height: 200px;
+    width: 100vw;
 }
