--- a/src/style.css
+++ b/src/style.css
@@ -19,31 +19,50 @@ body {
     color: white;
     
     min-width: 450px;
-    margin-left: 20px;
+    margin-left: 30px;
     margin-right: 20px;
+}
+
+.header-spacer {
+    flex: 1;
 }
 
 .menu-bar {
     display: flex;
     gap: 20px;
 
-    margin-right: 20px;
+    margin-right: 45px;
 }
 
-button {
-    width: 60px;
+.menu-bar>button {
+    width: auto;
     height: 50px;
 
     font-size: 20px;
     font-weight: 600;
     color: white;
 
-    background-color: darkred;
+    background-color: red;
     border: none;
+}
+
+.menu-bar>button:hover {
+    color: rgb(180, 0, 0);
+}
+
+.menu-bar>button:active {
+    color: darkred;
 }
 
 .content-container {
     background-color: blue;
     height: 200px;
     width: 100vw;
+}
+
+@media screen and (max-width: 780px) {
+    .menu-bar {
+        display: none;
+    }
+
 }
