--- a/src/style.css
+++ b/src/style.css
@@ -13,14 +13,14 @@ body {
 }
 
 .company-name {
-    font-size: 50px;
+    font-size: clamp(0px,9vw,50px);
     font-weight: 800;
-    text-overflow: nowrap;
+    white-space: nowrap;
     color: white;
     
-    min-width: 450px;
     margin-left: 30px;
-    margin-right: 20px;
+    margin-right: 30px;
+
 }
 
 .header-spacer {
@@ -62,6 +62,9 @@ body {
 
 @media screen and (max-width: 780px) {
     .menu-bar {
+        display: none;
+    }
+    .header-spacer {
         display: none;
     }
 
