--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: red;
 }
 
 /*
@@ -149,6 +150,54 @@ body {
 /*
 * main content
 */
+
+/*
+* menu page
+*/
+
+.menu-page {
+    --margin: 20px;
+    
+    height: calc(100vh - 100px - 2 * var(--margin));
+    box-sizing: border-box;
+    border-radius: 10px;
+    margin: var(--margin);
+    border: 10px solid white;
+    gap: 10px;
+
+    display: grid;
+
+    background-color: white;
+    overflow: scroll;
+}
+
+.menu-page>.category-container {
+    border-radius: 10px;
+    background-color: whitesmoke;
+    padding: 10px;
+}
+
+.menu-page>.category-container>.category-title {
+    font-size: 30px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.items-flexbox {
+    display: grid;
+    gap: 10px;
+}
+
+.item-container {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    flex: 1;
+}
+
+.item-name {
+    font-weight: 600;
+}
 
 /*
 * dynamic resizing
