--- a/src/style.css
+++ b/src/style.css
@@ -208,7 +208,7 @@ body {
 * menu page
 */
 
-.menu-page , .home-page {
+.menu-page , .home-page , .contact-page {
     --margin: 20px;
     
     height: calc(100vh - 100px - 2 * var(--margin));
@@ -250,6 +250,35 @@ body {
 
 .item-name {
     font-weight: 600;
+}
+
+/*
+* contact page
+*/
+
+.contact-page {
+    padding: 20px;
+}
+
+.page-title {
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.phone-container, .address-container {
+    display: flex;
+    font-size: 30px;
+    font-weight: 600;
+    gap: 20px;
+}
+
+.phone-label , .address-label {
+    flex: 1;
+    text-align: right;
+}
+
+.phone-value , .address-value {
+    flex: 2;
 }
 
 /*
