--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Khand:wght@400;500;600;700&display=swap');
+
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Khand', Helvetica, sans-serif;
     background-color: red;
 }
 
@@ -14,14 +16,14 @@ body {
     display: flex;
     align-items: center;
 
-    background-color: red;
+    background-color: white;
 }
 
 .company-name {
     font-size: clamp(0px,8vw,50px);
     font-weight: 800;
     white-space: nowrap;
-    color: white;
+    color: red;
     
     margin-left: 30px;
     margin-right: 30px;
