--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Khand:wght@400;500;600;700&display=swap');
 
+:root {
+    --red: #FF3D00;
+}
+
 body {
     font-family: 'Khand', Helvetica, sans-serif;
-    background-color: red;
+    background-color: white;
+}
+
+button {
+    font-family: 'Khand', Helvetica, sans-serif;
 }
 
 /*
@@ -17,52 +25,45 @@ body {
     align-items: center;
 
     background-color: white;
+
+    box-shadow: 0px 3px 10px lightgray;
+
+    gap: 20px;
 }
 
 .company-name {
     font-size: clamp(0px,8vw,50px);
     font-weight: 800;
     white-space: nowrap;
-    color: red;
+    color: var(--red);
     
-    margin-left: 30px;
-    margin-right: 30px;
-
-}
-
-.header-spacer {
     flex: 1;
+
+    text-align: center;
 }
 
-/*
-* menu bar
-*/
-
-.menu-bar {
-    display: flex;
-    gap: 20px;
-
-    margin-right: 45px;
-}
-
-.menu-bar>button {
+.header>button {
     width: auto;
     height: 50px;
 
-    font-size: 20px;
+    font-size: 30px;
     font-weight: 600;
-    color: white;
+    color: black;
 
-    background-color: red;
+    background-color: white;
     border: none;
 }
 
-.menu-bar>button:hover {
-    color: rgb(180, 0, 0);
+.header>button:first-of-type {
+    margin-left: 50px;
 }
 
-.menu-bar>button:active {
-    color: darkred;
+.header-contact-button {
+    margin-right: 50px;
+}
+
+.header>button:hover {
+    color: var(--red);
 }
 
 /*
@@ -72,19 +73,18 @@ body {
 .overflow-menu-button-open {
     visibility: hidden;
     position: absolute;
-    right: 30px;
+    left: 20px;
 
     height: 50px;
     width: 50px;
 
-    border: none;
-    background: none;
-
-    filter: invert(100%) sepia(6%) saturate(7423%) hue-rotate(214deg) brightness(107%) contrast(118%);
+    min-height: 50px;
+    min-width: 50px;
 }
 
 .overflow-menu-button-open:hover {
-    filter: invert(10%) sepia(78%) saturate(4402%) hue-rotate(354deg) brightness(94%) contrast(116%);
+    background: none;
+    filter: invert(32%) sepia(95%) saturate(4033%) hue-rotate(3deg) brightness(105%) contrast(104%);
 }
 
 .overflow-menu-button-close {
@@ -97,6 +97,8 @@ body {
 
     background-color: white;
     border: none;
+
+    align-self: flex-end;
 }
 
 .overflow-menu-button-close:hover {
@@ -113,7 +115,7 @@ body {
     height: 100vh;
     width: 200px;
     position: absolute;
-    right: 0px;
+    left: 0px;
     top: 0px;
     z-index: 1;
 
@@ -141,7 +143,7 @@ body {
 }
 
 .overflow-menu-button-home:hover, .overflow-menu-button-menu:hover, .overflow-menu-button-contact:hover {
-    background-color: red;
+    background-color: var(--red);
     color: white;
 }
 
@@ -287,11 +289,8 @@ body {
 * dynamic resizing
 */
 
-@media screen and (max-width: 780px) {
-    .menu-bar {
-        display: none;
-    }
-    .header-spacer {
+@media screen and (max-width: 840px) {
+    .header>button:not(.overflow-menu-button-open) {
         display: none;
     }
     .overflow-menu-button-open {
