--- a/src/style.css
+++ b/src/style.css
@@ -200,11 +200,7 @@ button {
     margin-bottom: 50px;
 }
 
-/*
-* home page
-*/
-
-.home-page>fieldset {
+fieldset {
     margin: 5px;
     margin-top: 0px;
     border: 5px solid var(--red);
@@ -214,7 +210,7 @@ button {
     flex-direction: column;
 }
 
-.home-page>fieldset>legend {
+fieldset>legend {
     margin-left: 20px;
     padding: 0 10px 0 10px;
 
@@ -222,6 +218,10 @@ button {
     font-size: 25px;
     color: var(--red);
 }
+
+/*
+* home page
+*/
 
 .main-image {
     margin-top: 20px;
@@ -328,20 +328,18 @@ button {
 * contact page
 */
 
-.contact-page {
-    padding: 20px;
-}
-
 .page-title {
     font-size: 30px;
     font-weight: 600;
+    margin: 20px 40px 0px 40px;
 }
 
-.contact-page>.phone-container, .contact-page>.address-container {
+.contact-page>fieldset>.phone-container, .contact-page>fieldset>.address-container {
     display: flex;
     font-size: 30px;
     font-weight: 600;
     gap: 20px;
+    margin: 20px min(40px,5vw) 20px min(40px,5vw);
 }
 
 .phone-label , .address-label {
