--- a/src/style.css
+++ b/src/style.css
@@ -352,10 +352,14 @@ fieldset>legend {
 .phone-label , .address-label {
     flex: 1;
     text-align: right;
+    font-size: 20px;
+    font-weight: 500;
 }
 
 .phone-value , .address-value {
     flex: 2;
+    font-size: 20px;
+    font-weight: 500;
 }
 
 /*
